--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="htext">
             <h1 class="animate__animated animate__fadeInUp">We Help<span>You To Make</span>Modern Interiors</h1>
         </div>
-        <img src="images/sofa.jpg" alt="sofa" class="animate__animated animate__zoomIn animate__delay-1s">
+        <img src="sofa.jpg" alt="sofa" class="animate__animated animate__zoomIn animate__delay-1s">
     </header>
 </body>
 </html>
